New monitor sprite.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+[Aa]ssets/ClientAssets/*
+!Assets/ClientAssets/placeholder.mat
+!Assets/ClientAssets/placeholder.meta
 [Ll]ibrary/
 [Tt]emp/
 [Oo]bj/
